Adding a function to always keep the first letter of each "imovel" UpperCased

--- a/src/app/components/propertie/propertie.component.html
+++ b/src/app/components/propertie/propertie.component.html
@@ -52,7 +52,7 @@
   <div class="container">
     <div class="row">
       <div class="col-sm d-flex flex-column">
-        <h3>{{properties.imovel}} - {{properties.endereco_bairro}}</h3>
+        <h3>{{toUpperFirstLetter(properties.imovel)}} - {{properties.endereco_bairro}}</h3>
         <h3 class="sm-sm-font-size">{{properties.desc_imovel_simple}}</h3>
 
         <div class="property">
