--- a/src/app/components/propertie/propertie.component.scss
+++ b/src/app/components/propertie/propertie.component.scss
@@ -32,7 +32,9 @@ textarea {
 }
 
 .address {
-    padding: 2em 0 !important;
+    border-top: none !important;
+    border-bottom: 1px solid rgba($brand-black, .05);
+    padding: 0.5em 0 1em 0 !important;
 
     a {
         font-weight: normal !important;
@@ -56,7 +58,7 @@ textarea {
 }
 
 .icons-container {
-    margin-bottom: 3em;
+    margin: 1em 0 3em 0;
 }
 
 .property-desc {
