Adding Google Maps "map" element

--- a/src/app/components/propertie/propertie.component.html
+++ b/src/app/components/propertie/propertie.component.html
@@ -55,6 +55,8 @@
         <h3>{{toUpperFirstLetter(properties.imovel)}} - {{properties.endereco_bairro}}</h3>
         <h3 class="sm-sm-font-size">{{properties.desc_imovel_simple}}</h3>
 
+        <div id="map"></div>
+
         <div class="property">
           <div class="property-details">
             <span class="address">
