Adding simple "cursor-pointer", to header logo.

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -6,7 +6,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse justify-content-between" id="navbarTogglerDemo01">
-                <div class="d-flex justify-content-center align-items-center">
+                <div class="d-flex justify-content-center align-items-center cursor-pointer">
                     <i class="d-flex justify-content-center align-items-center nav-header-logo">
                         <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="15" height="15"
                             viewBox="0 0 50 50">
