--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -22,7 +22,7 @@
                 </div>
             </div>
             <div class="col-sm-5 d-flex jusify-content-center align-items-center">
-                <img class="img-responsive custom-shadow-sm" width="100%" alt="Val Corretora"
+                <img class="img-responsive custom-shadow-sm" width="525px" height="350px" alt="Val Corretora"
                     src="../assets/images/2-2.png">
             </div>
         </div>
