--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -22,9 +22,9 @@
                 </div>
             </div>
             <div class="col-sm-5 d-flex jusify-content-center align-items-center">
-                <img class="img-responsive custom-shadow-sm" width="525px" height="350px" alt="Val Corretora"
-                    src="../assets/images/2-2.png">
-            </div>
+                <img class="img-responsive custom-shadow-sm" width-min="525px" width="100%" height-min="350px"
+                    height="auto" alt="Val Corretora" src="../assets/images/2-2.png">F
+            </div>F
         </div>
     </div>
 </div>
