Update Home Component

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -23,8 +23,8 @@
             </div>
             <div class="col-sm-5 d-flex jusify-content-center align-items-center">
                 <img class="img-responsive custom-shadow-sm" width-min="525px" width="100%" height-min="350px"
-                    height="auto" alt="Val Corretora" src="../assets/images/2-2.png">F
-            </div>F
+                    height="auto" alt="Val Corretora" src="../assets/images/2-2.png">
+            </div>
         </div>
     </div>
 </div>
