--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -21,16 +21,20 @@
 
                 <ul class="navbar-nav mb-2 mb-lg-0 d-flex align-items-center">
                     <li class="nav-item">
-                        <a class="nav-link cursor-pointer" (click)="scroll('home')">Início</a>
+                        <a class="nav-link cursor-pointer" href="#home">Início</a>
+                        <!-- <a class="nav-link cursor-pointer" (click)="scroll('home')">Início</a> -->
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link cursor-pointer" (click)="scroll('imoveis')">Imóveis</a>
+                        <a class="nav-link cursor-pointer" href="#imoveis">Imóveis</a>
+                        <!-- <a class="nav-link cursor-pointer" (click)="scroll('imoveis')">Imóveis</a> -->
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link cursor-pointer" (click)="scroll('construtoras')">Construtoras</a>
+                        <a class="nav-link cursor-pointer" href="#construtoras">Construtoras</a>
+                        <!-- <a class="nav-link cursor-pointer" (click)="scroll('construtoras')">Construtoras</a> -->
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link cursor-pointer" (click)="scroll('contato')">Contato</a>
+                        <a class="nav-link cursor-pointer" href="#contato">Contato</a>
+                        <!-- <a class="nav-link cursor-pointer" (click)="scroll('contato')">Contato</a> -->
                     </li>
                 </ul>
             </div>
