Importing the new searchbar component to properties component

--- a/src/app/components/properties/properties.component.html
+++ b/src/app/components/properties/properties.component.html
@@ -8,6 +8,10 @@
           características únicas e potencialidades.</p>
       </div>
     </div>
+
+    <app-propertie-searchbar (eventSearchProperties)="updateProperties($event)"
+      [propertiesInfo]="properties"></app-propertie-searchbar>
+
     <div class="row">
       <div class="col-md-4 animate-box" *ngFor="let propertiesItem of properties">
         <div class="property">
